sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value i
  while(i<=len){
        ^AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i,i+1)){
                  ^AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i,i+1)){
                    ^AlgGnomeSort:6: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:6: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:7: error: not found: value i
      i=i-1
      ^AlgGnomeSort:9: error: not found: value i
    else i=i+1
         ^